# knoxchat

./: .gitignore  .npmrc  .vscodeignore  CHANGELOG.md  CHECKPOINT_README.md  CHECKPOINT_STANDALONE.md  LICENSE  MEMORY_BRAIN.md  README.md  config_schema.json  esbuild.test.mjs  package-lock.json  package.json  task.md  tsconfig.json
ac/: Cargo.toml
ac/src/: cache.rs  context.rs  error.rs  ffi.rs  lib.rs  types.rs  utils.rs
ai-context/: AIContextBuilder.ts  CodeUnderstandingEngine.ts  ContextCompressor.ts  ContextExplainer.ts  ContextOptimizer.ts  ContextTreeBuilder.ts  IncrementalContextUpdater.ts  IntelligentQueryExpander.ts  IntentAnalyzer.ts  MultiModalIntegrator.ts  PredictiveContextLoader.ts  QueryIntentAnalyzer.ts  RelevanceEngine.ts  browser.ts  test-ai-context.ts  tsconfig.json  types.ts
ai-context/cache/: ContextCache.ts
ai-context/collaborative/: CollaborativeContextManager.ts
ai-context/incremental/: IncrementalUpdateManager.ts
ai-context/integrations/: BrowserGitCheckpointBridge.ts  GitCheckpointBridge.ts  IDEIntegration.ts  IntegrationManager.ts  README.md  integration-test.ts
ai-context/learning/: AdaptiveLearningSystem.ts
ai-context/ml/: AdvancedMLModels.ts
ai-context/parsers/: LanguageParser.ts  ParserRegistry.ts  PythonParser.ts  (+2 more)
browser/: default-stylesheet.css
checkpoints/: .build-cache.json  Cargo.toml  Cargo.toml.ADDITIONS  Cargo_additions.toml  benchmark.js  build.js  build_enterprise.js  index.d.ts  package-lock.json  package.json
knoxdev-package/: build.sh  package-lock.json  package.json  tsconfig.json
scripts/: build-checkpoints-safe.js  copy-checkpoint-binary.js  esbuild.js  package.js  prepackage-cross-platform.js  prepackage.js  utils.js
testing/: AdvancedPage.tsx  test.rb
(+117 files in other folders)
