[package]
name = "autocomplete"
version = "2.0.0"
description = "Knox Enterprise Autocomplete System"
authors.workspace = true
license.workspace = true
edition.workspace = true
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core dependencies
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
dirs.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true

# File system and async
tokio.workspace = true
walkdir.workspace = true
ignore.workspace = true

# Compression and encoding
flate2.workspace = true
base64.workspace = true
lz4_flex.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Node.js bindings
neon.workspace = true

# Additional dependencies
once_cell.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
regex.workspace = true
rayon.workspace = true

# Logging
log.workspace = true
env_logger.workspace = true

# Security and encryption
ring.workspace = true

# Configuration
config.workspace = true
toml.workspace = true

# System utilities
num_cpus.workspace = true

# Additional dependencies for production features
reqwest.workspace = true
futures.workspace = true

# Tree-sitter for semantic analysis
tree-sitter.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true

[features]
default = []
tree-sitter-support = []

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true

